# Static-Merkle-Array

./: Cargo.toml  README.md
src/: hash_constants.rs  lib.rs  mimc.rs  mimc_bn254_hasher.rs  utils.rs
